bnfc_ex/pml/Pml/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Pml/Par.y
-----------------------------------------------------------------------------

state 0 contains 1 shift/reduce conflicts.
state 10 contains 1 shift/reduce conflicts.
state 36 contains 2 shift/reduce conflicts.
state 38 contains 2 shift/reduce conflicts.
state 66 contains 1 reduce/reduce conflicts.
state 81 contains 3 shift/reduce conflicts.
state 103 contains 1 shift/reduce conflicts.
state 111 contains 2 shift/reduce conflicts.
state 115 contains 3 shift/reduce conflicts.
state 121 contains 1 shift/reduce conflicts.
state 135 contains 2 shift/reduce conflicts.
state 153 contains 2 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 155 contains 1 shift/reduce conflicts.
state 157 contains 2 shift/reduce conflicts.
state 195 contains 2 shift/reduce conflicts.
state 207 contains 2 shift/reduce conflicts.
state 293 contains 1 shift/reduce conflicts.
state 298 contains 2 shift/reduce conflicts.
state 299 contains 2 shift/reduce conflicts.
state 304 contains 1 shift/reduce conflicts.
state 308 contains 2 shift/reduce conflicts.
state 317 contains 2 shift/reduce conflicts and 9 reduce/reduce conflicts.
state 322 contains 1 shift/reduce conflicts.
state 328 contains 17 shift/reduce conflicts.
state 332 contains 17 shift/reduce conflicts.
state 344 contains 2 shift/reduce conflicts.
state 349 contains 2 shift/reduce conflicts.
state 350 contains 2 shift/reduce conflicts.
state 370 contains 3 shift/reduce conflicts.
state 372 contains 18 shift/reduce conflicts.
state 383 contains 1 reduce/reduce conflicts.
state 393 contains 2 shift/reduce conflicts.
state 405 contains 1 shift/reduce conflicts.
state 416 contains 17 shift/reduce conflicts.
state 422 contains 18 shift/reduce conflicts.
state 436 contains 2 shift/reduce conflicts.
state 481 contains 2 shift/reduce conflicts.
state 485 contains 1 shift/reduce conflicts.
state 492 contains 2 shift/reduce conflicts.
state 511 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pListModule -> ListModule                   (0)
	%start_pVisible -> Visible                         (1)
	%start_pChanPoll -> ChanPoll                       (2)
	%start_pSeparator -> Separator                     (3)
	%start_pTypename -> Typename                       (4)
	%start_pAndOr -> AndOr                             (5)
	%start_pBinOp -> BinOp                             (6)
	%start_pUnrOp -> UnrOp                             (7)
	%start_pConst -> Const                             (8)
	%start_pPrintType -> PrintType                     (9)
	%start_pModule -> Module                           (10)
	%start_pProctype -> Proctype                       (11)
	%start_pInline -> Inline                           (12)
	%start_pPactive -> Pactive                         (13)
	%start_pPdeclList -> PdeclList                     (14)
	%start_pPpriority -> Ppriority                     (15)
	%start_pPenabler -> Penabler                       (16)
	%start_pInit -> Init                               (17)
	%start_pIpriority -> Ipriority                     (18)
	%start_pNever -> Never                             (19)
	%start_pTrace -> Trace                             (20)
	%start_pUtype -> Utype                             (21)
	%start_pMtype -> Mtype                             (22)
	%start_pMsep -> Msep                               (23)
	%start_pMequals -> Mequals                         (24)
	%start_pMname -> Mname                             (25)
	%start_pDeclList -> DeclList                       (26)
	%start_pDecl -> Decl                               (27)
	%start_pDclIvar -> DclIvar                         (28)
	%start_pDeclVisible -> DeclVisible                 (29)
	%start_pUnsignedDecl -> UnsignedDecl               (30)
	%start_pUDclAssign -> UDclAssign                   (31)
	%start_pActive -> Active                           (32)
	%start_pAConst -> AConst                           (33)
	%start_pPriority -> Priority                       (34)
	%start_pEnabler -> Enabler                         (35)
	%start_pSequence -> Sequence                       (36)
	%start_pUStmt -> UStmt                             (37)
	%start_pStep -> Step                               (38)
	%start_pVarRefList -> VarRefList                   (39)
	%start_pAnyExpr -> AnyExpr                         (40)
	%start_pIvar -> Ivar                               (41)
	%start_pIvarConst -> IvarConst                     (42)
	%start_pIvarAssign -> IvarAssign                   (43)
	%start_pChInit -> ChInit                           (44)
	%start_pChType -> ChType                           (45)
	%start_pVarRef -> VarRef                           (46)
	%start_pVarRefAnyExpr -> VarRefAnyExpr             (47)
	%start_pVarRefTypedef -> VarRefTypedef             (48)
	%start_pSend -> Send                               (49)
	%start_pReceive -> Receive                         (50)
	%start_pPoll -> Poll                               (51)
	%start_pSendArgs -> SendArgs                       (52)
	%start_pArgList -> ArgList                         (53)
	%start_pRecvArgs -> RecvArgs                       (54)
	%start_pRecvArgList -> RecvArgList                 (55)
	%start_pUnaryMinus -> UnaryMinus                   (56)
	%start_pRecvArg -> RecvArg                         (57)
	%start_pAssign -> Assign                           (58)
	%start_pPargs -> Pargs                             (59)
	%start_pPArgList -> PArgList                       (60)
	%start_pPargList -> PargList                       (61)
	%start_pStmt -> Stmt                               (62)
	%start_pRange -> Range                             (63)
	%start_pOptions -> Options                         (64)
	%start_pRunPrio -> RunPrio                         (65)
	%start_pRunArgs -> RunArgs                         (66)
	%start_pExpr -> Expr                               (67)
	%start_pUname -> Uname                             (68)
	%start_pName -> Name                               (69)
	Integer -> L_integ                                 (70)
	String -> L_quoted                                 (71)
	PIdent -> L_PIdent                                 (72)
	ListModule -> Module                               (73)
	ListModule -> Module ListModule                    (74)
	Visible -> 'hidden'                                (75)
	Visible -> 'show'                                  (76)
	ChanPoll -> 'full'                                 (77)
	ChanPoll -> 'empty' 'nfull' 'nempty'               (78)
	Separator -> ';'                                   (79)
	Separator -> '->'                                  (80)
	Typename -> 'bit'                                  (81)
	Typename -> 'bool'                                 (82)
	Typename -> 'byte'                                 (83)
	Typename -> 'short'                                (84)
	Typename -> 'int'                                  (85)
	Typename -> 'mtype'                                (86)
	Typename -> 'chan'                                 (87)
	Typename -> Uname                                  (88)
	AndOr -> '&&'                                      (89)
	AndOr -> '||'                                      (90)
	BinOp -> '+'                                       (91)
	BinOp -> '-'                                       (92)
	BinOp -> '*'                                       (93)
	BinOp -> '/'                                       (94)
	BinOp -> '%'                                       (95)
	BinOp -> '&'                                       (96)
	BinOp -> '^'                                       (97)
	BinOp -> '|'                                       (98)
	BinOp -> '>'                                       (99)
	BinOp -> '<'                                       (100)
	BinOp -> '>='                                      (101)
	BinOp -> '<='                                      (102)
	BinOp -> '=='                                      (103)
	BinOp -> '!='                                      (104)
	BinOp -> '<<'                                      (105)
	BinOp -> '>>'                                      (106)
	BinOp -> AndOr                                     (107)
	UnrOp -> '~'                                       (108)
	UnrOp -> '-'                                       (109)
	UnrOp -> '!'                                       (110)
	Const -> 'true'                                    (111)
	Const -> 'false'                                   (112)
	Const -> 'skip'                                    (113)
	Const -> Integer                                   (114)
	PrintType -> 'print'                               (115)
	PrintType -> 'printf'                              (116)
	PrintType -> 'printm'                              (117)
	Module -> Proctype                                 (118)
	Module -> Inline                                   (119)
	Module -> Init                                     (120)
	Module -> Never                                    (121)
	Module -> Trace                                    (122)
	Module -> Utype                                    (123)
	Module -> Mtype                                    (124)
	Module -> DeclList                                 (125)
	Proctype -> Pactive 'proctype' Name '(' PdeclList ')' Ppriority Penabler '{' Sequence '}'   (126)
	Inline -> 'inline' Name '(' ArgList ')' '{' Sequence '}'   (127)
	Pactive ->                                         (128)
	Pactive -> Active                                  (129)
	PdeclList ->                                       (130)
	PdeclList -> DeclList                              (131)
	Ppriority ->                                       (132)
	Ppriority -> Priority                              (133)
	Penabler ->                                        (134)
	Penabler -> Enabler                                (135)
	Init -> 'init' Ipriority '{' Sequence '}' ';'      (136)
	Ipriority ->                                       (137)
	Ipriority -> Priority                              (138)
	Never -> 'never' '{' Sequence '}'                  (139)
	Trace -> 'trace' '{' Sequence '}'                  (140)
	Utype -> 'typedef' Name '{' DeclList '}' ';'       (141)
	Mtype -> 'mtype' Mequals '{' Mname '}' Msep        (142)
	Msep ->                                            (143)
	Msep -> ';'                                        (144)
	Mequals ->                                         (145)
	Mequals -> '='                                     (146)
	Mname -> Name                                      (147)
	Mname -> Name ',' Mname                            (148)
	DeclList -> Decl Separator                         (149)
	DeclList -> Decl                                   (150)
	DeclList -> Decl Separator DeclList                (151)
	Decl -> DeclVisible Typename DclIvar               (152)
	Decl -> DeclVisible UnsignedDecl                   (153)
	DclIvar -> Ivar ',' DclIvar                        (154)
	DclIvar -> Ivar                                    (155)
	DeclVisible ->                                     (156)
	DeclVisible -> Visible                             (157)
	UnsignedDecl -> 'unsigned' Name ':' Const UDclAssign   (158)
	UDclAssign ->                                      (159)
	UDclAssign -> '=' AnyExpr                          (160)
	Active -> 'active' AConst                          (161)
	AConst ->                                          (162)
	AConst -> '[' Const ']'                            (163)
	Priority -> 'priority' Const                       (164)
	Enabler -> 'provided' '(' Expr ')'                 (165)
	Sequence -> Step                                   (166)
	Sequence -> Step Separator                         (167)
	Sequence -> Step Sequence                          (168)
	Sequence -> Step Separator Sequence                (169)
	UStmt ->                                           (170)
	UStmt -> 'unless' Stmt                             (171)
	Step -> Mtype                                      (172)
	Step -> Stmt UStmt                                 (173)
	Step -> DeclList                                   (174)
	Step -> 'xr' VarRefList                            (175)
	Step -> 'xs' VarRefList                            (176)
	VarRefList -> VarRef                               (177)
	VarRefList -> VarRef ',' VarRefList                (178)
	AnyExpr -> '(' AnyExpr ')'                         (179)
	AnyExpr -> AnyExpr BinOp AnyExpr                   (180)
	AnyExpr -> UnrOp AnyExpr                           (181)
	AnyExpr -> '(' AnyExpr '->' AnyExpr ':' AnyExpr ')'   (182)
	AnyExpr -> 'len' '(' VarRef ')'                    (183)
	AnyExpr -> Poll                                    (184)
	AnyExpr -> VarRef                                  (185)
	AnyExpr -> Const                                   (186)
	AnyExpr -> 'timeout'                               (187)
	AnyExpr -> 'np_'                                   (188)
	AnyExpr -> 'enabled' '(' AnyExpr ')'               (189)
	AnyExpr -> 'pc_value' '(' AnyExpr ')'              (190)
	AnyExpr -> Name '[' AnyExpr ']' '@' Name           (191)
	AnyExpr -> 'run' Name '(' RunArgs ')' RunPrio      (192)
	AnyExpr -> 'get_priority' '(' Expr ')'             (193)
	AnyExpr -> 'set_priority' '(' Expr ',' Expr ')'    (194)
	Ivar -> Name IvarConst IvarAssign                  (195)
	IvarConst ->                                       (196)
	IvarConst -> '[' Const ']'                         (197)
	IvarAssign ->                                      (198)
	IvarAssign -> '=' AnyExpr                          (199)
	IvarAssign -> '=' ChInit                           (200)
	ChInit -> '[' Const ']' 'of' '{' ChType '}'        (201)
	ChType -> Typename                                 (202)
	ChType -> Typename ',' ChType                      (203)
	VarRef -> Name VarRefAnyExpr VarRefTypedef         (204)
	VarRefAnyExpr ->                                   (205)
	VarRefAnyExpr -> '[' AnyExpr ']'                   (206)
	VarRefTypedef ->                                   (207)
	VarRefTypedef -> '.' VarRef                        (208)
	Send -> VarRef '!' SendArgs                        (209)
	Send -> VarRef '!' '!' SendArgs                    (210)
	Receive -> VarRef '?' RecvArgs                     (211)
	Receive -> VarRef '?' '?' RecvArgs                 (212)
	Receive -> VarRef '?' '<' RecvArgs '>'             (213)
	Receive -> VarRef '?' '?' '<' RecvArgs '>'         (214)
	Poll -> VarRef '?' '[' RecvArgs ']'                (215)
	Poll -> VarRef '?' '?' '[' RecvArgs ']'            (216)
	SendArgs -> ArgList                                (217)
	SendArgs -> AnyExpr '(' ArgList ')'                (218)
	ArgList -> AnyExpr ',' ArgList                     (219)
	ArgList -> AnyExpr                                 (220)
	ArgList ->                                         (221)
	RecvArgs -> RecvArgList                            (222)
	RecvArgs -> RecvArgList '(' RecvArgs ')'           (223)
	RecvArgList -> RecvArg                             (224)
	RecvArgList -> RecvArg RecvArgList                 (225)
	UnaryMinus ->                                      (226)
	UnaryMinus -> '-'                                  (227)
	RecvArg -> VarRef                                  (228)
	RecvArg -> 'eval' '(' VarRef ')'                   (229)
	RecvArg -> UnaryMinus Const                        (230)
	Assign -> VarRef '=' AnyExpr                       (231)
	Assign -> VarRef '+' '+'                           (232)
	Assign -> VarRef '-' '-'                           (233)
	Pargs -> String                                    (234)
	Pargs -> ArgList                                   (235)
	Pargs -> String ',' ArgList                        (236)
	PArgList ->                                        (237)
	PargList -> ',' ArgList                            (238)
	Stmt -> 'if' Options 'fi'                          (239)
	Stmt -> 'do' Options 'od'                          (240)
	Stmt -> 'for' '(' Range ')' '{' Sequence '}'       (241)
	Stmt -> 'atomic' '{' Sequence '}'                  (242)
	Stmt -> 'd_step' '{' Sequence '}'                  (243)
	Stmt -> 'select' '(' Sequence ')'                  (244)
	Stmt -> '{' Sequence '}'                           (245)
	Stmt -> Send                                       (246)
	Stmt -> Receive                                    (247)
	Stmt -> Assign                                     (248)
	Stmt -> 'else'                                     (249)
	Stmt -> 'break'                                    (250)
	Stmt -> 'goto' Name                                (251)
	Stmt -> Name ':' Stmt                              (252)
	Stmt -> PrintType '(' Pargs ')'                    (253)
	Stmt -> 'assert' Expr                              (254)
	Stmt -> Name '(' ArgList ')'                       (255)
	Stmt -> Expr                                       (256)
	Range -> Name 'in' Name                            (257)
	Range -> Name ':' AnyExpr '..' AnyExpr             (258)
	Options -> '::' Sequence                           (259)
	Options -> '::' Sequence Options                   (260)
	RunPrio ->                                         (261)
	RunPrio -> Priority                                (262)
	RunArgs ->                                         (263)
	RunArgs -> ArgList                                 (264)
	Expr -> AnyExpr                                    (265)
	Expr -> '(' Expr ')'                               (266)
	Expr -> Expr AndOr Expr                            (267)
	Expr -> ChanPoll '(' VarRef ')'                    (268)
	Uname -> Name                                      (269)
	Name -> PIdent                                     (270)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'..'           { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	':'            { PT _ (TS _ 16) }
	'::'           { PT _ (TS _ 17) }
	';'            { PT _ (TS _ 18) }
	'<'            { PT _ (TS _ 19) }
	'<<'           { PT _ (TS _ 20) }
	'<='           { PT _ (TS _ 21) }
	'='            { PT _ (TS _ 22) }
	'=='           { PT _ (TS _ 23) }
	'>'            { PT _ (TS _ 24) }
	'>='           { PT _ (TS _ 25) }
	'>>'           { PT _ (TS _ 26) }
	'?'            { PT _ (TS _ 27) }
	'@'            { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'^'            { PT _ (TS _ 31) }
	'active'       { PT _ (TS _ 32) }
	'assert'       { PT _ (TS _ 33) }
	'atomic'       { PT _ (TS _ 34) }
	'bit'          { PT _ (TS _ 35) }
	'bool'         { PT _ (TS _ 36) }
	'break'        { PT _ (TS _ 37) }
	'byte'         { PT _ (TS _ 38) }
	'chan'         { PT _ (TS _ 39) }
	'd_step'       { PT _ (TS _ 40) }
	'do'           { PT _ (TS _ 41) }
	'else'         { PT _ (TS _ 42) }
	'empty'        { PT _ (TS _ 43) }
	'enabled'      { PT _ (TS _ 44) }
	'eval'         { PT _ (TS _ 45) }
	'false'        { PT _ (TS _ 46) }
	'fi'           { PT _ (TS _ 47) }
	'for'          { PT _ (TS _ 48) }
	'full'         { PT _ (TS _ 49) }
	'get_priority' { PT _ (TS _ 50) }
	'goto'         { PT _ (TS _ 51) }
	'hidden'       { PT _ (TS _ 52) }
	'if'           { PT _ (TS _ 53) }
	'in'           { PT _ (TS _ 54) }
	'init'         { PT _ (TS _ 55) }
	'inline'       { PT _ (TS _ 56) }
	'int'          { PT _ (TS _ 57) }
	'len'          { PT _ (TS _ 58) }
	'mtype'        { PT _ (TS _ 59) }
	'nempty'       { PT _ (TS _ 60) }
	'never'        { PT _ (TS _ 61) }
	'nfull'        { PT _ (TS _ 62) }
	'np_'          { PT _ (TS _ 63) }
	'od'           { PT _ (TS _ 64) }
	'of'           { PT _ (TS _ 65) }
	'pc_value'     { PT _ (TS _ 66) }
	'print'        { PT _ (TS _ 67) }
	'printf'       { PT _ (TS _ 68) }
	'printm'       { PT _ (TS _ 69) }
	'priority'     { PT _ (TS _ 70) }
	'proctype'     { PT _ (TS _ 71) }
	'provided'     { PT _ (TS _ 72) }
	'run'          { PT _ (TS _ 73) }
	'select'       { PT _ (TS _ 74) }
	'set_priority' { PT _ (TS _ 75) }
	'short'        { PT _ (TS _ 76) }
	'show'         { PT _ (TS _ 77) }
	'skip'         { PT _ (TS _ 78) }
	'timeout'      { PT _ (TS _ 79) }
	'trace'        { PT _ (TS _ 80) }
	'true'         { PT _ (TS _ 81) }
	'typedef'      { PT _ (TS _ 82) }
	'unless'       { PT _ (TS _ 83) }
	'unsigned'     { PT _ (TS _ 84) }
	'xr'           { PT _ (TS _ 85) }
	'xs'           { PT _ (TS _ 86) }
	'{'            { PT _ (TS _ 87) }
	'|'            { PT _ (TS _ 88) }
	'||'           { PT _ (TS _ 89) }
	'}'            { PT _ (TS _ 90) }
	'~'            { PT _ (TS _ 91) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_PIdent       { PT _ (T_PIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pListModule rule  0
	%start_pVisible rule  1
	%start_pChanPoll rule  2
	%start_pSeparator rule  3
	%start_pTypename rule  4
	%start_pAndOr   rule  5
	%start_pBinOp   rule  6
	%start_pUnrOp   rule  7
	%start_pConst   rule  8
	%start_pPrintType rule  9
	%start_pModule  rule  10
	%start_pProctype rule  11
	%start_pInline  rule  12
	%start_pPactive rule  13
	%start_pPdeclList rule  14
	%start_pPpriority rule  15
	%start_pPenabler rule  16
	%start_pInit    rule  17
	%start_pIpriority rule  18
	%start_pNever   rule  19
	%start_pTrace   rule  20
	%start_pUtype   rule  21
	%start_pMtype   rule  22
	%start_pMsep    rule  23
	%start_pMequals rule  24
	%start_pMname   rule  25
	%start_pDeclList rule  26
	%start_pDecl    rule  27
	%start_pDclIvar rule  28
	%start_pDeclVisible rule  29
	%start_pUnsignedDecl rule  30
	%start_pUDclAssign rule  31
	%start_pActive  rule  32
	%start_pAConst  rule  33
	%start_pPriority rule  34
	%start_pEnabler rule  35
	%start_pSequence rule  36
	%start_pUStmt   rule  37
	%start_pStep    rule  38
	%start_pVarRefList rule  39
	%start_pAnyExpr rule  40
	%start_pIvar    rule  41
	%start_pIvarConst rule  42
	%start_pIvarAssign rule  43
	%start_pChInit  rule  44
	%start_pChType  rule  45
	%start_pVarRef  rule  46
	%start_pVarRefAnyExpr rule  47
	%start_pVarRefTypedef rule  48
	%start_pSend    rule  49
	%start_pReceive rule  50
	%start_pPoll    rule  51
	%start_pSendArgs rule  52
	%start_pArgList rule  53
	%start_pRecvArgs rule  54
	%start_pRecvArgList rule  55
	%start_pUnaryMinus rule  56
	%start_pRecvArg rule  57
	%start_pAssign  rule  58
	%start_pPargs   rule  59
	%start_pPArgList rule  60
	%start_pPargList rule  61
	%start_pStmt    rule  62
	%start_pRange   rule  63
	%start_pOptions rule  64
	%start_pRunPrio rule  65
	%start_pRunArgs rule  66
	%start_pExpr    rule  67
	%start_pUname   rule  68
	%start_pName    rule  69
	Integer         rule  70
	String          rule  71
	PIdent          rule  72
	ListModule      rules 73, 74
	Visible         rules 75, 76
	ChanPoll        rules 77, 78
	Separator       rules 79, 80
	Typename        rules 81, 82, 83, 84, 85, 86, 87, 88
	AndOr           rules 89, 90
	BinOp           rules 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107
	UnrOp           rules 108, 109, 110
	Const           rules 111, 112, 113, 114
	PrintType       rules 115, 116, 117
	Module          rules 118, 119, 120, 121, 122, 123, 124, 125
	Proctype        rule  126
	Inline          rule  127
	Pactive         rules 128, 129
	PdeclList       rules 130, 131
	Ppriority       rules 132, 133
	Penabler        rules 134, 135
	Init            rule  136
	Ipriority       rules 137, 138
	Never           rule  139
	Trace           rule  140
	Utype           rule  141
	Mtype           rule  142
	Msep            rules 143, 144
	Mequals         rules 145, 146
	Mname           rules 147, 148
	DeclList        rules 149, 150, 151
	Decl            rules 152, 153
	DclIvar         rules 154, 155
	DeclVisible     rules 156, 157
	UnsignedDecl    rule  158
	UDclAssign      rules 159, 160
	Active          rule  161
	AConst          rules 162, 163
	Priority        rule  164
	Enabler         rule  165
	Sequence        rules 166, 167, 168, 169
	UStmt           rules 170, 171
	Step            rules 172, 173, 174, 175, 176
	VarRefList      rules 177, 178
	AnyExpr         rules 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194
	Ivar            rule  195
	IvarConst       rules 196, 197
	IvarAssign      rules 198, 199, 200
	ChInit          rule  201
	ChType          rules 202, 203
	VarRef          rule  204
	VarRefAnyExpr   rules 205, 206
	VarRefTypedef   rules 207, 208
	Send            rules 209, 210
	Receive         rules 211, 212, 213, 214
	Poll            rules 215, 216
	SendArgs        rules 217, 218
	ArgList         rules 219, 220, 221
	RecvArgs        rules 222, 223
	RecvArgList     rules 224, 225
	UnaryMinus      rules 226, 227
	RecvArg         rules 228, 229, 230
	Assign          rules 231, 232, 233
	Pargs           rules 234, 235, 236
	PArgList        rule  237
	PargList        rule  238
	Stmt            rules 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256
	Range           rules 257, 258
	Options         rules 259, 260
	RunPrio         rules 261, 262
	RunArgs         rules 263, 264
	Expr            rules 265, 266, 267, 268
	Uname           rule  269
	Name            rule  270

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pListModule -> . ListModule                  (rule 0)

	'active'       shift, and enter state 214
	'bit'          reduce using rule 156
	'bool'         reduce using rule 156
	'byte'         reduce using rule 156
	'chan'         reduce using rule 156
	'hidden'       shift, and enter state 199
	'init'         shift, and enter state 240
	'inline'       shift, and enter state 250
	'int'          reduce using rule 156
	'mtype'        shift, and enter state 200
			(reduce using rule 156)

	'never'        shift, and enter state 236
	'proctype'     reduce using rule 128
	'short'        reduce using rule 156
	'show'         shift, and enter state 201
	'trace'        shift, and enter state 234
	'typedef'      shift, and enter state 232
	'unsigned'     reduce using rule 156
	L_PIdent       reduce using rule 156

	ListModule     goto state 292
	Visible        goto state 192
	Module         goto state 293
	Proctype       goto state 254
	Inline         goto state 255
	Pactive        goto state 252
	Init           goto state 256
	Never          goto state 257
	Trace          goto state 258
	Utype          goto state 259
	Mtype          goto state 260
	DeclList       goto state 261
	Decl           goto state 195
	DeclVisible    goto state 196
	Active         goto state 248

State 1

	%start_pVisible -> . Visible                        (rule 1)

	'hidden'       shift, and enter state 199
	'show'         shift, and enter state 201

	Visible        goto state 291

State 2

	%start_pChanPoll -> . ChanPoll                      (rule 2)

	'empty'        shift, and enter state 89
	'full'         shift, and enter state 92

	ChanPoll       goto state 290

State 3

	%start_pSeparator -> . Separator                    (rule 3)

	'->'           shift, and enter state 288
	';'            shift, and enter state 289

	Separator      goto state 287

State 4

	%start_pTypename -> . Typename                      (rule 4)

	'bit'          shift, and enter state 174
	'bool'         shift, and enter state 175
	'byte'         shift, and enter state 176
	'chan'         shift, and enter state 177
	'int'          shift, and enter state 178
	'mtype'        shift, and enter state 179
	'short'        shift, and enter state 180
	L_PIdent       shift, and enter state 74

	PIdent         goto state 72
	Typename       goto state 286
	Uname          goto state 173
	Name           goto state 76

State 5

	%start_pAndOr -> . AndOr                            (rule 5)

	'&&'           shift, and enter state 270
	'||'           shift, and enter state 284

	AndOr          goto state 285

State 6

	%start_pBinOp -> . BinOp                            (rule 6)

	'!='           shift, and enter state 267
	'%'            shift, and enter state 268
	'&'            shift, and enter state 269
	'&&'           shift, and enter state 270
	'*'            shift, and enter state 271
	'+'            shift, and enter state 272
	'-'            shift, and enter state 273
	'/'            shift, and enter state 274
	'<'            shift, and enter state 275
	'<<'           shift, and enter state 276
	'<='           shift, and enter state 277
	'=='           shift, and enter state 278
	'>'            shift, and enter state 279
	'>='           shift, and enter state 280
	'>>'           shift, and enter state 281
	'^'            shift, and enter state 282
	'|'            shift, and enter state 283
	'||'           shift, and enter state 284

	AndOr          goto state 265
	BinOp          goto state 266

State 7

	%start_pUnrOp -> . UnrOp                            (rule 7)

	'!'            shift, and enter state 86
	'-'            shift, and enter state 88
	'~'            shift, and enter state 102

	UnrOp          goto state 264

State 8

	%start_pConst -> . Const                            (rule 8)

	'false'        shift, and enter state 91
	'skip'         shift, and enter state 99
	'true'         shift, and enter state 101
	L_integ        shift, and enter state 71

	Integer        goto state 77
	Const          goto state 263

State 9

	%start_pPrintType -> . PrintType                    (rule 9)

	'print'        shift, and enter state 131
	'printf'       shift, and enter state 132
	'printm'       shift, and enter state 133

	PrintType      goto state 262

State 10

	%start_pModule -> . Module                          (rule 10)

	'active'       shift, and enter state 214
	'bit'          reduce using rule 156
	'bool'         reduce using rule 156
	'byte'         reduce using rule 156
	'chan'         reduce using rule 156
	'hidden'       shift, and enter state 199
	'init'         shift, and enter state 240
	'inline'       shift, and enter state 250
	'int'          reduce using rule 156
	'mtype'        shift, and enter state 200
			(reduce using rule 156)

	'never'        shift, and enter state 236
	'proctype'     reduce using rule 128
	'short'        reduce using rule 156
	'show'         shift, and enter state 201
	'trace'        shift, and enter state 234
	'typedef'      shift, and enter state 232
	'unsigned'     reduce using rule 156
	L_PIdent       reduce using rule 156

	Visible        goto state 192
	Module         goto state 253
	Proctype       goto state 254
	Inline         goto state 255
	Pactive        goto state 252
	Init           goto state 256
	Never          goto state 257
	Trace          goto state 258
	Utype          goto state 259
	Mtype          goto state 260
	DeclList       goto state 261
	Decl           goto state 195
	DeclVisible    goto state 196
	Active         goto state 248

State 11

	%start_pProctype -> . Proctype                      (rule 11)

	'active'       shift, and enter state 214
	'proctype'     reduce using rule 128

	Proctype       goto state 251
	Pactive        goto state 252
	Active         goto state 248

State 12

	%start_pInline -> . Inline                          (rule 12)

	'inline'       shift, and enter state 250

	Inline         goto state 249

State 13

	%start_pPactive -> . Pactive                        (rule 13)

	'active'       shift, and enter state 214
	%eof           reduce using rule 128

	Pactive        goto state 247
	Active         goto state 248

State 14

	%start_pPdeclList -> . PdeclList                    (rule 14)

	'bit'          reduce using rule 156
	'bool'         reduce using rule 156
	'byte'         reduce using rule 156
	'chan'         reduce using rule 156
	'hidden'       shift, and enter state 199
	'int'          reduce using rule 156
	'mtype'        reduce using rule 156
	'short'        reduce using rule 156
	'show'         shift, and enter state 201
	'unsigned'     reduce using rule 156
	L_PIdent       reduce using rule 156
	%eof           reduce using rule 130

	Visible        goto state 192
	PdeclList      goto state 245
	DeclList       goto state 246
	Decl           goto state 195
	DeclVisible    goto state 196

State 15

	%start_pPpriority -> . Ppriority                    (rule 15)

	'priority'     shift, and enter state 109
	%eof           reduce using rule 132

	Ppriority      goto state 243
	Priority       goto state 244

State 16

	%start_pPenabler -> . Penabler                      (rule 16)

	'provided'     shift, and enter state 209
	%eof           reduce using rule 134

	Penabler       goto state 241
	Enabler        goto state 242

State 17

	%start_pInit -> . Init                              (rule 17)

	'init'         shift, and enter state 240

	Init           goto state 239

State 18

	%start_pIpriority -> . Ipriority                    (rule 18)

	'priority'     shift, and enter state 109
	%eof           reduce using rule 137

	Ipriority      goto state 237
	Priority       goto state 238

State 19

	%start_pNever -> . Never                            (rule 19)

	'never'        shift, and enter state 236

	Never          goto state 235

State 20

	%start_pTrace -> . Trace                            (rule 20)

	'trace'        shift, and enter state 234

	Trace          goto state 233

State 21

	%start_pUtype -> . Utype                            (rule 21)

	'typedef'      shift, and enter state 232

	Utype          goto state 231

State 22

	%start_pMtype -> . Mtype                            (rule 22)

	'mtype'        shift, and enter state 200

	Mtype          goto state 230

State 23

	%start_pMsep -> . Msep                              (rule 23)

	';'            shift, and enter state 229
	%eof           reduce using rule 143

	Msep           goto state 228

State 24

	%start_pMequals -> . Mequals                        (rule 24)

	'='            shift, and enter state 227
	%eof           reduce using rule 145

	Mequals        goto state 226

State 25

	%start_pMname -> . Mname                            (rule 25)

	L_PIdent       shift, and enter state 74

	PIdent         goto state 72
	Mname          goto state 224
	Name           goto state 225

State 26

	%start_pDeclList -> . DeclList                      (rule 26)

	'bit'          reduce using rule 156
	'bool'         reduce using rule 156
	'byte'         reduce using rule 156
	'chan'         reduce using rule 156
	'hidden'       shift, and enter state 199
	'int'          reduce using rule 156
	'mtype'        reduce using rule 156
	'short'        reduce using rule 156
	'show'         shift, and enter state 201
	'unsigned'     reduce using rule 156
	L_PIdent       reduce using rule 156

	Visible        goto state 192
	DeclList       goto state 223
	Decl           goto state 195
	DeclVisible    goto state 196

State 27

	%start_pDecl -> . Decl                              (rule 27)

	'bit'          reduce using rule 156
	'bool'         reduce using rule 156
	'byte'         reduce using rule 156
	'chan'         reduce using rule 156
	'hidden'       shift, and enter state 199
	'int'          reduce using rule 156
	'mtype'        reduce using rule 156
	'short'        reduce using rule 156
	'show'         shift, and enter state 201
	'unsigned'     reduce using rule 156
	L_PIdent       reduce using rule 156

	Visible        goto state 192
	Decl           goto state 222
	DeclVisible    goto state 196

State 28

	%start_pDclIvar -> . DclIvar                        (rule 28)

	L_PIdent       shift, and enter state 74

	PIdent         goto state 72
	DclIvar        goto state 220
	Ivar           goto state 221
	Name           goto state 188

State 29

	%start_pDeclVisible -> . DeclVisible                (rule 29)

	'hidden'       shift, and enter state 199
	'show'         shift, and enter state 201
	%eof           reduce using rule 156

	Visible        goto state 192
	DeclVisible    goto state 219

State 30

	%start_pUnsignedDecl -> . UnsignedDecl              (rule 30)

	'unsigned'     shift, and enter state 218
